Ecommerce/src/main/java/com/example/ecommerce/errors/EmptyCartException.java
package com.example.ecommerce.errors;

public class EmptyCartException extends IllegalStateException {
    public EmptyCartException(String message) {
        super(message);
    }
}
